# CS-104

./: README.md
hw1/: README.md  first_memtest  first_memtest.cpp  flexCharManager.cpp  flexCharManager.h  hw1.txt  hw1q5  hw1q5.cpp  palindrome  palindrome.cpp  second_memtest.cpp  simpleCharManager.cpp
hw1/tests/: junit-flexchar.cpp  junit-palindrome.cpp  junit-simplechar.cpp
hw2/: README.md  circular_list_int.cpp  circular_list_int.h  duck_duck_goose.cpp  duck_duck_goose.h  hw2.txt  jtest-clist.cpp  jtest-duckduck.cpp  jtest-ssort.cpp  jtest_hw2.py  selection_sort.cpp  selection_sort.h
hw2/hw2-check/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  README.md  cmake_install.cmake  duck_duck_goose
hw2/hw2-check/circular_list_tests/: CMakeLists.txt  CTestTestfile.cmake  Makefile  circular_list_test  cmake_install.cmake
hw2/hw2-check/duck_duck_goose_tests/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  duck_duck_goose_test
hw2/hw2-check/duck_duck_goose_tests/testFiles/basic_five_players/: output.txt
hw2/hw2-check/selection_sort_tests/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  selection_sort_test
hw2/hw2-check/testing_utils/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
hw2/hw2-check/testing_utils/kwsys/: CTestTestfile.cmake  Makefile  cmake_install.cmake
hw2/hw2_tests/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
hw3/: Makefile  README.md  circular_list_int.cpp  hw3.txt  jtest_hw3.py  parser  parser.cpp  stackint  stackint.cpp  test.txt
hw3/hw3-check/: CMakeLists.txt  README.md
hw3/hw3-check/parser_tests/: CMakeLists.txt  parser_test.cpp
hw3/hw3-check/stack_tests/: CMakeLists.txt  Makefile  stack_test.cpp
hw3/hw3-check/test_cmake_lib/: 104CompileFlags.cmake  CustomTests.cmake
hw3/hw3-check/testing_utils/: CMakeLists.txt  Makefile  parser_utils.cpp  parser_utils.h  user_code_runner.cpp
hw3/hw3-check/testing_utils/kwsys/: CTestTestfile.cmake  Makefile  cmake_install.cmake
hw4/: Board.cpp  Board.h  Dictionary.cpp  Dictionary.h  Exceptions.h  Makefile  Move.cpp  Move.h  Player.cpp  Player.h  README.md  Square.h  scrabble.cpp
hw5/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  README.md  cave.cpp  cmake_install.cmake  fatalist.cpp  functor.cpp  functor.h  msort.h  problem2.txt
hw5/hw5_tests/: CMakeCache.txt  CTestTestfile.cmake  GR5_hw-username.md  Makefile  cmake_install.cmake
hw5/hw5_tests/Testing/20181127-1900/: Test.xml
hw5/hw5_tests/Testing/Temporary/: CTestCostData.txt
hw5/hw5_tests/cave_tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake
hw5/hw5_tests/cave_tests/testFiles/Branching/: input.txt  output.txt
hw5/hw5_tests/cave_tests/testFiles/LargeLoop/: input.txt
hw5/hw5_tests/cave_tests/testFiles/LoopRetrace/: input.txt  output.txt
hw5/hw5_tests/cave_tests/testFiles/RandomCorrectPath/: input.txt
hw5/hw5_tests/cave_tests/testFiles/RandomMovements/: input.txt
hw5/hw5_tests/cave_tests/testFiles/TenThousandMoves/: input.txt
hw5/hw5_tests/compile-logs/: cave.complog  fatalist.complog  functor.complog  msort.complog
hw5/hw5_tests/fatalist_tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake
hw5/hw5_tests/functor_tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake
hw5/hw5_tests/msort_tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake
hw5/hw5_tests/results/: cave_formatted.txt  cave_result.txt  fatalist_formatted.txt  fatalist_result.txt  functor_formatted.txt  functor_result.txt  msort_formatted.txt  msort_result.txt
hw5/hw5_tests/test-output/: cave-test-stdout.txt  fatalist-test-stdout.txt  functor-test-stdout.txt  msort-test-stdout.txt
hw5/hw5_tests/testing_utils/: CTestTestfile.cmake  Makefile  cmake_install.cmake
hw5/hw5_tests/testing_utils/kwsys/: CTestTestfile.cmake  Makefile  cmake_install.cmake
hw5/hw5_tests/testing_utils/libperf/: CTestTestfile.cmake  Makefile  cmake_install.cmake
hw6/: Makefile  MinHeap.h  README.md  coloring.cpp  search.cpp  search.h
hw6/hw6-check/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
hw6/hw6-check/color_tests/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  color_tests.cpp  color_utils.cpp  color_utils.h
hw6/hw6-check/color_tests/test_files/AllAs/: input.txt
hw6/hw6-check/color_tests/test_files/NarrowPath/: input.txt  output.txt
hw6/hw6-check/color_tests/test_files/Stress80x80/: input.txt  output.txt
hw6/hw6-check/heap_tests/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  heap_tests.cpp
hw6/hw6-check/search_tests/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  search_tests.cpp  search_utils.cpp  search_utils.h
hw6/hw6-check/testing_utils/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
hw6/hw6-check/testing_utils/kwsys/: CTestTestfile.cmake  Makefile  cmake_install.cmake
hw6/hw6-check/testing_utils/libperf/: CTestTestfile.cmake  Makefile  cmake_install.cmake
hw7/: README.md  avlbst.h  bst.cpp  bst.h  jtest_hw7.py  rotateBST.h
hw7/hw7-check/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
hw7/hw7-check/avl_tests/: CMakeLists.txt  CTestTestfile.cmake  Makefile  avl_tests.cpp  cmake_install.cmake
hw7/hw7-check/bst_tests/: CMakeLists.txt  CTestTestfile.cmake  Makefile  bst_tests.cpp  cmake_install.cmake
hw7/hw7-check/rotate_tests/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  rotate_tests.cpp
hw7/hw7-check/testing_utils/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
hw7/hw7-check/testing_utils/kwsys/: CTestTestfile.cmake  Makefile  cmake_install.cmake
hw7/hw7-check/testing_utils/libperf/: CTestTestfile.cmake  Makefile  cmake_install.cmake
hw8/: Board.cpp  Board.h  ConfigFile.h  Dictionary.cpp  Dictionary.h  Exceptions.h  Makefile  Move.cpp  Move.h  Player.cpp  Player.h  README.md  Square.h  config.txt  main.cpp  masterAI.cpp  masterAI.h  test.cpp  trie.cpp  trie.h  ttest.cpp
(+25 files in other folders)
